# onspring-api-sdk-rust

./: Cargo.toml  README.md  example.env
.github/workflows/: ci.yml  release.yml  version.yml
examples/: apps.rs  fields.rs  files.rs  lists.rs  ping.rs  records.rs  reports.rs
src/: client.rs  error.rs  lib.rs
src/endpoints/: apps.rs  fields.rs  files.rs  lists.rs  mod.rs  ping.rs  records.rs  reports.rs
src/models/: app.rs  enums.rs  field.rs  file.rs  list.rs  mod.rs  paging.rs  record.rs  report.rs
tests/: integration_apps.rs  integration_fields.rs  integration_files.rs  integration_lists.rs  integration_ping.rs  integration_records.rs  integration_reports.rs  test_apps.rs  test_fields.rs  test_files.rs  test_lists.rs  test_ping.rs  test_records.rs  test_reports.rs
tests/common/: mod.rs
tests/integration_common/: mod.rs
tests/test_data/: test-attachment.txt
