[package]
name = "onspring-api-sdk-rust"
version = "0.0.1"
edition = "2021"
description = "Rust SDK for the Onspring API"
license = "MIT"
repository = "https://github.com/StevanFreeborn/onspring-api-sdk-rust"
homepage = "https://github.com/StevanFreeborn/onspring-api-sdk-rust"
documentation = "https://docs.rs/onspring-api-sdk-rust"

[lib]
name = "onspring"

[dependencies]
bytes = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"
serde_json = "1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
serial_test = "3"
